--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -1,14 +1,15 @@
 .main {
-  max-width: 1100px;
+  width: 900px;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
   display: grid;
   grid-template-rows: auto;
 
   grid-template-columns: 100px 1fr 300px;
   grid-template-areas:
     "header header header header"
-    ". content toolbar toolbar"
+    "toolbar toolbar toolbar toolbar"
+    "content content content content"
     "footer footer footer footer";
   justify-content: center;
   background-color: wheat;
