--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -1,8 +1,32 @@
 .aside {
-  background-color: red;
-  width: 200px;
+  background-color: #deb6ab;
+  border-radius: 0 2rem 2rem 0;
+  width: 150px;
+  height: 350px;
   position: absolute;
+  top: 50%;
   left: 0;
-  height: 100%;
   border-right: 1px solid #000;
+  transform: translateY(-50%);
+
+  .wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin: 0;
+
+    li {
+      color: #fff;
+      font-size: 16px;
+      text-transform: uppercase;
+      margin-bottom: 1rem;
+    }
+  }
 }
