--- a/src/components/TodoPanel/TodoPanel.module.scss
+++ b/src/components/TodoPanel/TodoPanel.module.scss
@@ -1,4 +1,86 @@
 .toolbar {
   grid-area: toolbar;
-  border-left: 1px solid #000;
+  width: 100%;
+  padding: 2rem 0;
+  // background-color: red;
+
+  .wrapper {
+    .form {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
+      width: 100%;
+      margin-bottom: 2rem;
+
+      .input {
+        width: 50%;
+        font-size: 18px;
+        padding: 0.6rem 0.4rem;
+        border: none;
+        border-radius: 0.3rem;
+        margin-right: 2rem;
+
+        &:focus {
+          outline: none;
+        }
+      }
+
+      .btn {
+        padding: 0.8rem 1.5rem;
+        background-color: #deb6ab;
+        color: #f8ecd1;
+        border: none;
+        border-radius: 0.5rem;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 0.7;
+        }
+        &:active {
+          transform: scale(0.95);
+        }
+      }
+    }
+    .control {
+      width: 100%;
+      display: flex;
+      // flex-direction: row;
+      align-items: center;
+      justify-content: center;
+
+      & > button {
+        background-color: transparent;
+        border: none;
+        font-size: 18px;
+        line-height: 24px;
+        text-transform: uppercase;
+        width: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+        color: #deb6ab;
+        margin-right: 1rem;
+        cursor: pointer;
+
+        &:hover {
+          opacity: 0.5;
+        }
+        &:active {
+          transform: scale(0.95);
+        }
+
+        & > span {
+          width: 1rem;
+          height: 1rem;
+          border-radius: 50%;
+          background-color: red;
+        }
+
+        &:last-child > span {
+          background-color: green;
+        }
+      }
+    }
+  }
 }
