--- a/src/components/TodoPanel/TodoPanel.module.scss
+++ b/src/components/TodoPanel/TodoPanel.module.scss
@@ -10,19 +10,31 @@
       align-items: center;
       justify-content: center;
       flex-direction: row;
-      width: 100%;
       margin-bottom: 2rem;
 
       .input {
+        display: flex;
+        align-items: center;
+        justify-content: center;
         width: 50%;
-        font-size: 18px;
-        padding: 0.6rem 0.4rem;
-        border: none;
-        border-radius: 0.3rem;
-        margin-right: 2rem;
+        position: relative;
+        margin-right: 1rem;
 
-        &:focus {
-          outline: none;
+        input {
+          width: 100%;
+          font-size: 18px;
+          padding: 0.6rem 2rem 0.6rem 0.4rem;
+          border: none;
+          border-radius: 0.3rem;
+
+          &:focus {
+            outline: none;
+          }
+        }
+        svg {
+          position: absolute;
+          right: 10px;
+          cursor: pointer;
         }
       }
 
@@ -59,7 +71,7 @@
         display: flex;
         align-items: center;
         justify-content: space-around;
-        color: #deb6ab;
+        color: #000;
         margin-right: 1rem;
         cursor: pointer;
 
@@ -79,7 +91,24 @@
 
         &:last-child > span {
           background-color: green;
+          // color: green;
         }
+      }
+    }
+
+    .banner {
+      padding: 0.3rem 1rem;
+      background-color: red;
+      position: fixed;
+      top: 0;
+      left: 50%;
+      transform: translateX(-50%);
+      transition: all 1s;
+      z-index: 100;
+
+      h3 {
+        font-size: 16px;
+        text-align: center;
       }
     }
   }
