--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -12,5 +12,5 @@
     "content content content content"
     "footer footer footer footer";
   justify-content: center;
-  background-color: wheat;
+  // background-color: #85586f;
 }
