--- a/src/components/Todo/Todo.module.scss
+++ b/src/components/Todo/Todo.module.scss
@@ -4,6 +4,8 @@
   margin: 0 0 2rem 0;
   background-color: #f8ecd1;
   border: 0.2rem solid #f8ecd1;
+  -webkit-box-shadow: 0px 0px 18px -2px rgba(0, 0, 0, 0.76);
+  box-shadow: 0px 0px 18px -2px rgba(0, 0, 0, 0.76);
 
   &.ishot {
     animation: ishot 1s infinite;
