--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -5,6 +5,9 @@
   }
 
   .list {
+    display: flex;
+    flex-direction: column-reverse;
+
     padding: 3rem 2rem;
     list-style: none;
     margin: 0;
