--- a/src/components/Todo/Todo.module.scss
+++ b/src/components/Todo/Todo.module.scss
@@ -6,7 +6,6 @@
   border: 0.2rem solid #f8ecd1;
   -webkit-box-shadow: 0px 0px 18px -2px rgba(0, 0, 0, 0.76);
   box-shadow: 0px 0px 18px -2px rgba(0, 0, 0, 0.76);
-  cursor: pointer;
 
   &.ishot {
     animation: ishot 3s infinite;
@@ -60,6 +59,12 @@
     h3 {
       font-size: 20px;
       font-weight: 300;
+      cursor: pointer;
+      transition: all 0.7s;
+      &:hover {
+        transform: scale(1.5);
+        color: green;
+      }
     }
 
     div {
