--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -1,16 +1,25 @@
 .banner {
   width: 100%;
 
-  //   background-color: red;
-
   .wrapper {
-    padding: 6rem 1rem;
+    padding: 1rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    border: 3px solid #deb6ab;
     border-radius: 30px;
+
+    button {
+      margin-top: 2rem;
+      background-color: transparent;
+      border: 1px solid #deb6ab;
+      color: #deb6ab;
+      border-radius: 1rem;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 0.6rem 1.2rem;
+      cursor: pointer;
+    }
 
     h1 {
       font-size: 30px;
