--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -5,24 +5,108 @@
   top: 50%;
   left: 0;
   transform: translateY(-50%);
+  transition: all 1s ease;
+  z-index: 1005;
+
+  .menu {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 2rem;
+    left: 2rem;
+
+    @media (min-width: 1290px) {
+      display: none;
+    }
+
+    @media (max-width: 900px) {
+      top: 0.5rem;
+      left: 0.5rem;
+    }
+
+    button {
+      cursor: pointer;
+      background-color: transparent;
+      border: none;
+
+      svg {
+        box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.299);
+        border-radius: 50%;
+        padding: 1rem 1rem;
+        background-color: #deb6ab;
+        color: #fff;
+        font-size: 36px;
+        font-weight: bold;
+
+        @media (max-width: 900px) {
+          font-size: 28px;
+          padding: 0.6rem 0.6rem;
+        }
+      }
+    }
+
+    &.isClose {
+      left: unset;
+      right: 1rem;
+      button {
+        svg {
+          border: 1px solid #fff;
+          box-shadow: none;
+        }
+      }
+    }
+  }
 
   .wrapper {
+    grid-area: sidebar;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @media (min-width: 1290px) {
+      display: flex !important;
+    }
+
+    @media (max-width: 1290px) {
+      box-shadow: 25px 0px 100px 5px rgba(0, 0, 0, 0.76);
+    }
+    .title {
+      position: absolute;
+      top: 10%;
+      display: flex;
+      width: 100%;
+      justify-content: center;
+
+      h1 {
+        color: #fff;
+        font-size: 24px;
+        text-transform: uppercase;
+      }
+    }
+
+    .links {
+      display: flex;
+      justify-content: center;
+      width: 100%;
+
+      a {
+        font-size: 30px;
+        color: #000;
+      }
+    }
+
     .navbar {
       display: flex;
       flex-direction: column;
       list-style: none;
       padding: 0;
-      // align-items: flex-start;
 
       li {
-        width: 100px;
+        width: 180px;
         font-size: 16px;
-        color: #85586f;
-        font-weight: 300;
+        color: #fff;
+        font-weight: bold;
         padding: 1rem 0 1rem 2rem;
         background-color: transparent;
         border: none;
@@ -38,7 +122,7 @@
         &:hover {
           color: #deb6ab;
           background-color: #85586f56;
-          opacity: 0.6;
+          opacity: 0.8;
         }
       }
     }
