--- a/src/components/Todo/Todo.module.scss
+++ b/src/components/Todo/Todo.module.scss
@@ -7,6 +7,10 @@
   -webkit-box-shadow: 0px 0px 18px -2px rgba(0, 0, 0, 0.76);
   box-shadow: 0px 0px 18px -2px rgba(0, 0, 0, 0.76);
 
+  @media (max-width: 450px) {
+    width: 90%;
+  }
+
   &.ishot {
     animation: ishot 3s infinite;
     @keyframes ishot {
@@ -46,6 +50,10 @@
       left: 10px;
       font-size: 28px;
       color: green;
+
+      @media (max-width: 450px) {
+        font-size: 22px;
+      }
     }
   }
 
@@ -55,18 +63,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
+
+    @media (max-width: 450px) {
+      margin-bottom: 1rem;
+    }
 
     & > h3 {
-      display: flex;
-      flex-wrap: wrap;
+      text-align: center;
+      inline-size: 80%;
+      overflow-wrap: break-word;
       font-size: 20px;
       font-weight: 300;
-      cursor: pointer;
       transition: all 0.7s;
+      cursor: pointer;
+
+      @media (max-width: 450px) {
+        font-size: 16px;
+        inline-size: 70%;
+      }
 
       &:hover {
-        transform: scale(1.5);
+        transform: scale(1.1);
         color: green;
       }
     }
@@ -75,7 +93,13 @@
       position: absolute;
       right: 0;
       display: flex;
+      flex-direction: row;
       align-items: center;
+
+      @media (max-width: 750px) {
+        flex-direction: column;
+        justify-content: center;
+      }
 
       button {
         display: flex;
@@ -89,6 +113,10 @@
         border-radius: 50%;
         cursor: pointer;
 
+        @media (max-width: 750px) {
+          margin: 0.5rem;
+        }
+
         &:hover {
           opacity: 0.7;
         }
@@ -98,16 +126,21 @@
 
         svg {
           font-size: 20px;
+
+          @media (max-width: 450px) {
+            font-size: 15px;
+          }
         }
       }
     }
   }
 
   .description {
+    text-align: center;
     position: relative;
     display: flex;
     justify-content: space-between;
-
+    align-items: flex-end;
     width: 100%;
 
     span {
@@ -119,6 +152,12 @@
       padding: 2px 6px;
       border-radius: 8px;
       background-color: rgba(0, 128, 0, 0.399);
+
+      @media (max-width: 450px) {
+        font-size: 12px;
+        width: 100%;
+        height: 100%;
+      }
     }
   }
 }
