--- a/src/components/TodoPanel/TodoPanel.module.scss
+++ b/src/components/TodoPanel/TodoPanel.module.scss
@@ -2,16 +2,28 @@
   grid-area: toolbar;
   width: 100%;
   padding-top: 2rem;
-  // background-color: red;
+
+  @media (max-width: 470px) {
+    margin-top: 3rem;
+  }
 
   .wrapper {
     height: 170px;
+
     .form {
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: row;
       margin-bottom: 2rem;
+
+      @media (max-width: 770px) {
+        flex-direction: column;
+      }
+
+      @media (max-width: 450px) {
+        margin: 1rem;
+      }
 
       .input {
         display: flex;
@@ -21,12 +33,26 @@
         position: relative;
         margin-right: 1rem;
 
+        @media (max-width: 770px) {
+          width: 70%;
+          margin-right: 0;
+          margin-bottom: 1rem;
+        }
+
+        @media (max-width: 450px) {
+          width: 90%;
+        }
+
         input {
           width: 100%;
           font-size: 18px;
           padding: 0.6rem 2rem 0.6rem 0.4rem;
           border: 0.1px solid #deb6ab;
           border-radius: 0.3rem;
+
+          @media (max-width: 450px) {
+            font-size: 16px;
+          }
 
           &:focus {
             outline: none;
@@ -51,6 +77,14 @@
         border-radius: 0.5rem;
         cursor: pointer;
 
+        @media (max-width: 770px) {
+          width: 70%;
+        }
+
+        @media (max-width: 450px) {
+          width: 90%;
+        }
+
         &:hover {
           opacity: 0.7;
         }
@@ -66,6 +100,10 @@
       align-items: center;
       justify-content: center;
 
+      @media (max-width: 450px) {
+        width: 90%;
+      }
+
       & > button {
         background-color: transparent;
         border: none;
@@ -80,6 +118,10 @@
         margin-right: 1rem;
         cursor: pointer;
 
+        @media (max-width: 450px) {
+          font-size: 15px;
+        }
+
         &:hover {
           opacity: 0.5;
         }
@@ -90,6 +132,11 @@
           width: 1rem;
           height: 1rem;
           border-radius: 50%;
+
+          @media (max-width: 450px) {
+            width: 0.5rem;
+            height: 0.5rem;
+          }
         }
         .hot {
           background-color: red;
@@ -114,6 +161,12 @@
       transition: all 1s;
       z-index: 100;
       cursor: pointer;
+
+      @media (max-width: 450px) {
+        top: 10px;
+        text-align: center;
+        inline-size: 40%;
+      }
 
       h3 {
         color: #ff5d5d;
