--- a/src/pages/Edit/Edit.module.scss
+++ b/src/pages/Edit/Edit.module.scss
@@ -7,6 +7,18 @@
     align-items: center;
     justify-content: center;
 
+    & > button {
+      margin-top: 2rem;
+      background-color: transparent;
+      border: 1px solid #deb6ab;
+      color: #deb6ab;
+      border-radius: 1rem;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 0.6rem 1.2rem;
+      cursor: pointer;
+    }
+
     & > h1 {
       font-size: 26px;
       text-transform: uppercase;
