--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -2,6 +2,7 @@
   grid-area: content;
 
   .wrapper {
+    width: 100%;
     .title {
       text-align: center;
       font-size: 28px;
@@ -9,15 +10,27 @@
       color: #deb6ab;
       padding: 0;
       margin: 0;
+
+      @media (max-width: 450px) {
+        font-size: 22px;
+      }
     }
 
     .list {
       display: flex;
       flex-direction: column-reverse;
-
       padding: 3rem 2rem;
       list-style: none;
       margin: 0;
+
+      @media (max-width: 915px) {
+        padding: 2rem 1.5rem;
+      }
+
+      @media (max-width: 450px) {
+        align-items: center;
+        padding: 0.3rem 0.1rem;
+      }
     }
   }
 }
